# autotext

./: .gitattributes  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
configs/: config.yaml  logging.yaml
data/ag_news/: test.csv  train.csv
data/amazon/: test.csv  train.csv
data/dbpedia/: test.csv  train.csv
data/imdb/: test.csv  train.csv
notebooks/: AutoText_Training_Colab.ipynb
src/: __init__.py  config.py  data_loader.py  evaluator.py  hpo.py  log_manager.py  pipeline.py  schedulers.py  trainer.py  utils.py
src/models/: __init__.py  base.py  cnn.py  ffn.py  transformer.py
